[project]
name = "vqe-fsm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pylatexenc>=2.10",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
exclude = ["**.ipynb", "**.pyi"]
